src/App.css
:root {
  --nu-purple: #4E2A84;
  --teal: #008080;
  --black: #000000;
  --bright-gray: #D9D9D9;
  --gray: #333;
  --white: #FFFFFF;
  --font: "Helvetica", sans-serif;
} 

ul {
  display: flex;
  justify-content: space-between;
  align-items: center
}

a {
  color: var(--white);
  font-family: var(--font);
  justify-content: space-between;
}

header {
  background-color: var(--nu-purple);
}

header nav {
  border-left: 10px solid var(--bright-gray); 
}


nav ul {
  display: flex;     
  list-style: none;  
  gap: 1.5rem;       
}

footer {
  display: flex;
  background: var(--black);
  align-items: center;
  justify-content: space-between;
  color: var(--white);
  padding: 0rem 1rem;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding:1rem
}

#search-bar {
  width: 40%;
  padding: 0.5rem 1rem; 
  border: none;           
  border-radius: 8px;
  border-left:   10px solid var(--bright-gray);   
}


body {
  font-family: var(--font);
  color: var(--gray);
  background-color: var(--white);
}

.hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

.cards {
  display: flex;
  padding: 1rem;
  gap: 1rem;
  overflow-x: auto;
}

.card {
  min-width: 250px;
  padding: 1rem;
  border-radius: 16px;
  background-color: var(--bright-gray);
  border-left: 30px solid var(--teal); 
}

.card-liked {
  border-left: 30px solid var(--nu-purple) !important; 
}

.logo-circle {
  height: 50px;           
  width: 50px;            
  background-color: var(--nu-purple); 
  border-radius: 50%;     
  display: flex;
  justify-content: center;  
  align-items: center;    
  font-size: 1.2rem;
  font-weight: bold;
}

h2, h3 {
  font-family: var(--font);
}

h1 {
  font-family: var(--font);
  text-align: center; 
}

.link {
  padding:1rem;
}

button {
  float: right;

}

